--- a/code/cal_zonal_global_co2_ctracker_obs.ipynb
+++ b/code/cal_zonal_global_co2_ctracker_obs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -409,7 +409,7 @@
        "SH_cal      397.629020  400.740438   NaN  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,9 @@
     "ax3.set_xlabel(\"year\")\n",
     "ax3.set_ylabel(\"CO2, ppm\")\n",
     "ax3.legend()\n",
-    "ax3.set_title(\"c. Calculated co2 - Raw co2\",fontsize=15);"
+    "ax3.set_title(\"c. Calculated co2 - Raw co2\",fontsize=15);\n",
+    "\n",
+    "plt.savefig(\"figure4.png\")"
    ]
   },
   {
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +608,9 @@
     "ax2.set_ylabel(\"Latitude\")\n",
     "ax2.set_xticks(xticks) \n",
     "ax2.set_xticklabels(xticklabels,rotation=45)\n",
-    "ax2.set_title(\"b. Calculated CO2\");"
+    "ax2.set_title(\"b. Calculated CO2\");\n",
+    "\n",
+    "plt.savefig(\"figure5.png\")"
    ]
   },
   {
@@ -618,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +756,7 @@
        "SH_co2rate_cal      2.807116  2.948396   NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +843,9 @@
     "ax.set_xlabel(\"Year\")\n",
     "ax.set_ylabel(\"CO2, ppm / year\")\n",
     "ax.legend()\n",
-    "ax.set_title(\"a. Calculated CO2 growth rate\");\n"
+    "ax.set_title(\"a. Calculated CO2 growth rate\");\n",
+    "\n",
+    "plt.savefig(\"figure6.png\")"
    ]
   },
   {
