--- a/code/cal_zonal_global_co2_wdcgg_mikio.ipynb
+++ b/code/cal_zonal_global_co2_wdcgg_mikio.ipynb
@@ -1,12 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CO2 source: WDCGG 129 stations, 2000-2017\n",
+    "# CO2 analysis method: Mikio"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "#import numpy as np\n",
     "import scipy as sp\n",
     "import pandas as pd\n",
     "from os import listdir\n",
