--- a/code/plot_co2mass.ipynb
+++ b/code/plot_co2mass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "SH_co2ma       1569.072973  1578.957197  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,9 @@
     "ax3.set_xlabel(\"year\")\n",
     "ax3.set_ylabel(\"CO2 mass, Gt\")\n",
     "ax3.legend()\n",
-    "ax3.set_title(\"c. Southern Hemisphere CO2 mass\",fontsize=15);"
+    "ax3.set_title(\"c. Southern Hemisphere CO2 mass\",fontsize=15);\n",
+    "\n",
+    "plt.savefig(\"figure12.png\")"
    ]
   },
   {
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +334,9 @@
     "g.set_ylabel(\"Latitude\")\n",
     "g.set_xticks(xticks)\n",
     "g.set_xticklabels(xticklabels,rotation=45) \n",
-    "g.set_title(\"a. Calculated CO2 mass\");"
+    "g.set_title(\"a. Calculated CO2 mass\");\n",
+    "\n",
+    "plt.savefig(\"figure13.png\")"
    ]
   },
   {
@@ -340,11 +344,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "-70.75  -32.25\n",
-    "-2.75   25.75\n",
-    "68.25   40.75"
-   ]
+   "source": []
   }
  ],
  "metadata": {
