--- a/code/cal_zonal_global_co2_ctracker_model_129p.ipynb
+++ b/code/cal_zonal_global_co2_ctracker_model_129p.ipynb
@@ -86,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\""
+    "IN_PATH = \"data/ctracker_model/\"\n",
+    "OUT_PATH = \"data/ctracker_model/\""
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "# read metadata and list the files/output from fit_filter_noaa.ipynb\n",
     "df_meta = pd.read_csv(IN_PATH+\"df_meta_wdcgg.csv\", encoding = \"ISO-8859-1\")\n",
-    "csvfiles = listdir(IN_PATH+\"output129\\\\\")\n",
+    "csvfiles = listdir(IN_PATH+\"output129/\")\n",
     "df_meta[\"monthes\"] = 0\n",
     "df_meta[\"flag\"] = 0\n",
     "\n",
@@ -142,7 +142,7 @@
     "    df_meta.at[i,\"flag\"]= 1\n",
     "    \n",
     "    # read csv data, and fill in full period (2000-2017)\n",
-    "    dat = pd.read_csv(IN_PATH+\"output129\\\\\"+ matching[0])\n",
+    "    dat = pd.read_csv(IN_PATH+\"output129/\"+ matching[0])\n",
     "    dat.date = pd.to_datetime(dat.date)\n",
     "    df_merge = pd.merge(df_fullperiod,dat, how=\"left\", on=\"date\")\n",
     "    \n",
