--- a/code/cal_zonal_global_co2_ctracker_model_global.ipynb
+++ b/code/cal_zonal_global_co2_ctracker_model_global.ipynb
@@ -94,8 +94,8 @@
    "outputs": [],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
+    "IN_PATH = \"data/ctracker_model/\"\n",
+    "OUT_PATH = \"data/ctracker_model/\"\n",
     "\n",
     "# orginaze full monthly time series from 2000 to 2017\n",
     "df_datetime = pd.DataFrame()\n",
@@ -330,8 +330,8 @@
     }
    ],
    "source": [
-    "df_co2_raw = pd.read_csv(IN_PATH + \"outputglobal\\\\\"+ \"CT2018_raw_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
-    "df_co2_cal = pd.read_csv(IN_PATH + \"outputglobal\\\\\"+ \"CT2018_cal_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
+    "df_co2_raw = pd.read_csv(IN_PATH + \"outputglobal/\"+ \"CT2018_raw_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
+    "df_co2_cal = pd.read_csv(IN_PATH + \"outputglobal/\"+ \"CT2018_cal_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
     "\n",
     "\n",
     "zonal_deg = 30\n",
@@ -473,8 +473,8 @@
    ],
    "source": [
     "# Arrange dataframe for plot\n",
-    "df_co2_raw = pd.read_csv(IN_PATH + \"outputglobal\\\\\"+ \"CT2018_raw_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
-    "df_co2_cal = pd.read_csv(IN_PATH + \"outputglobal\\\\\"+ \"CT2018_cal_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
+    "df_co2_raw = pd.read_csv(IN_PATH + \"outputglobal/\"+ \"CT2018_raw_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
+    "df_co2_cal = pd.read_csv(IN_PATH + \"outputglobal/\"+ \"CT2018_cal_co2_2000_2017_monthly_fullglobal_level1.csv\")\n",
     "\n",
     "\n",
     "zonal_deg = 5\n",
@@ -676,7 +676,7 @@
     }
    ],
    "source": [
-    "df_co2rate_cal = pd.read_csv(IN_PATH + \"outputglobal\\\\\" + \"CT2018_cal_co2rate_2000_2017_monthly_fullglobal_level1.csv\")\n",
+    "df_co2rate_cal = pd.read_csv(IN_PATH + \"outputglobal/\" + \"CT2018_cal_co2rate_2000_2017_monthly_fullglobal_level1.csv\")\n",
     "\n",
     "zonal_deg = 30\n",
     "df_area = pd.DataFrame(grid_area(0.5))\n",
@@ -787,7 +787,7 @@
    ],
    "source": [
     "# Arrange dataframe for plot\n",
-    "df_co2rate_cal = pd.read_csv(IN_PATH + \"outputglobal\\\\\" + \"CT2018_cal_co2rate_2000_2017_monthly_fullglobal_level1.csv\")\n",
+    "df_co2rate_cal = pd.read_csv(IN_PATH + \"outputglobal/\" + \"CT2018_cal_co2rate_2000_2017_monthly_fullglobal_level1.csv\")\n",
     "\n",
     "zonal_deg = 5\n",
     "lat_range = range(-90,90,zonal_deg)\n",
