--- a/code/cal_zonal_global_co2_ctracker_obs.ipynb
+++ b/code/cal_zonal_global_co2_ctracker_obs.ipynb
@@ -86,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_obs\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_obs\\\\\""
+    "IN_PATH = \"data/ctracker_obs/\"\n",
+    "OUT_PATH = \"data/ctracker_obs/\""
    ]
   },
   {
@@ -130,7 +130,7 @@
    "source": [
     "# read metadata and list the files/output from fit_filter_noaa.ipynb\n",
     "df_meta = pd.read_csv(IN_PATH+\"df_meta_selected_ctracker.csv\")\n",
-    "csvfiles = listdir(IN_PATH+\"output\\\\\")\n",
+    "csvfiles = listdir(IN_PATH+\"output/\")\n",
     "df_meta[\"monthes\"] = 0\n",
     "df_meta[\"flag\"] = 0\n",
     "\n",
