--- a/code/cal_zonal_global_co2_wdcgg_noaa_from2000.ipynb
+++ b/code/cal_zonal_global_co2_wdcgg_noaa_from2000.ipynb
@@ -86,8 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\\""
+    "IN_PATH = \"data/wdcgg_obs/\"\n",
+    "OUT_PATH = \"data/wdcgg_obs/\""
    ]
   },
   {
@@ -135,7 +135,7 @@
    "source": [
     "# read metadata and list the files/output from fit_filter_noaa.ipynb\n",
     "df_meta = pd.read_csv(IN_PATH+\"df_meta_wdcgg.csv\", encoding = \"ISO-8859-1\")\n",
-    "csvfiles = listdir(IN_PATH+\"outputfrom2000\\\\\")\n",
+    "csvfiles = listdir(IN_PATH+\"outputfrom2000/\")\n",
     "df_meta[\"monthes\"] = 0\n",
     "df_meta[\"flag\"] = 0\n",
     "\n",
@@ -162,7 +162,7 @@
     "    df_meta.at[i,\"flag\"]= 1\n",
     "    \n",
     "    # read csv data, and fill in full period (2000-2017)\n",
-    "    dat = pd.read_csv(IN_PATH+\"outputfrom2000\\\\\"+ matching[0])\n",
+    "    dat = pd.read_csv(IN_PATH+\"outputfrom2000/\"+ matching[0])\n",
     "    dat.date = pd.to_datetime(dat.date)\n",
     "    df_merge = pd.merge(df_fullperiod,dat, how=\"left\", on=\"date\")\n",
     "    \n",
