--- a/code/compare_wdcgg_ctracker_obs.ipynb
+++ b/code/compare_wdcgg_ctracker_obs.ipynb
@@ -104,10 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WDCGG_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\\"\n",
-    "CTRACKER_OBS_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_obs\\\\\"\n",
-    "CTRACKER_MODEL_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\comparison\\\\\"\n"
+    "WDCGG_PATH = \"data/wdcgg_obs/\"\n",
+    "CTRACKER_OBS_PATH = \"data/ctracker_obs/\"\n",
+    "CTRACKER_MODEL_PATH = \"data/ctracker_model/\"\n",
+    "OUT_PATH = \"data/comparison/\"\n"
    ]
   },
   {
