--- a/code/fit_filter_noaa.ipynb
+++ b/code/fit_filter_noaa.ipynb
@@ -377,8 +377,8 @@
    ],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_obs\\\\input\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_obs\\\\output\\\\\"\n",
+    "IN_PATH = \"data/ctracker_obs/input/\"\n",
+    "OUT_PATH = \"data/ctracker_obs/output/\"\n",
     "\n",
     "# decide if plot, and which station\n",
     "ifplot = 1\n",
@@ -458,8 +458,8 @@
    ],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\input\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\outputfrom2000\\\\\"\n",
+    "IN_PATH = \"data/wdcgg_obs/input/\"\n",
+    "OUT_PATH = \"data/wdcgg_obs/outputfrom2000/\"\n",
     "\n",
     "# decide if plot, and which station\n",
     "ifplot = 1\n",
@@ -511,8 +511,8 @@
    ],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\input\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\output\\\\\"\n",
+    "IN_PATH = \"data/wdcgg_obs/input/\"\n",
+    "OUT_PATH = \"data/wdcgg_obs/output/\"\n",
     "\n",
     "# decide if plot, and which station\n",
     "ifplot = 1\n",
@@ -564,8 +564,8 @@
    ],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\ti_missfl\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\wdcgg_obs\\\\outputMikio\\\\\"\n",
+    "IN_PATH = \"data/wdcgg_obs/ti_missfl/\"\n",
+    "OUT_PATH = \"data/wdcgg_obs/outputMikio/\"\n",
     "\n",
     "# decide if plot, and which station\n",
     "ifplot = 1\n",
@@ -636,8 +636,8 @@
    ],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\input129\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\output129\\\\\"\n",
+    "IN_PATH = \"data/ctracker_model/input129/\"\n",
+    "OUT_PATH = \"data/ctracker_model/output129/\"\n",
     "\n",
     "# decide if plot, and which station\n",
     "ifplot = 1\n",
@@ -661,7 +661,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -697,8 +699,8 @@
    ],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\inputglobal\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\outputglobal\\\\\"\n",
+    "IN_PATH = \"data/ctracker_model/inputglobal/\"\n",
+    "OUT_PATH = \"data/ctracker_model/outputglobal/\"\n",
     "\n",
     "ifplot = 1\n",
     "whichgrid = 1\n",
