--- a/code/cal_co2mass_ctracker_global.ipynb
+++ b/code/cal_co2mass_ctracker_global.ipynb
@@ -59,8 +59,8 @@
    "outputs": [],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\icosdata\\\\carbontracker\\\\monthly_global\\\\merge\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
+    "IN_PATH = \"../data/ctracker_model/\"\n",
+    "OUT_PATH = \"../data/ctracker_model/\"\n",
     "# load data\n",
     "ncdat = netCDF4.Dataset(IN_PATH + 'CT2018_2000_2017_monthly.nc')"
    ]
