--- a/code/plot_co2mass.ipynb
+++ b/code/plot_co2mass.ipynb
@@ -87,8 +87,8 @@
    "outputs": [],
    "source": [
     "# set path of input and output\n",
-    "IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
-    "OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
+    "IN_PATH = \"../data/ctracker_model/\"\n",
+    "OUT_PATH = \"../data/ctracker_model/\"\n",
     "\n",
     "# orginaze full monthly time series from 2000 to 2017\n",
     "df_datetime = pd.DataFrame()\n",
