--- a/code/plot_co2mass.ipynb
+++ b/code/plot_co2mass.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set path of input and output\n",
+    "# IN_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
+    "# OUT_PATH = \"D:\\\\MyData\\\\jupter\\\\icos\\\\ctracker_model\\\\\"\n",
+    "\n",
     "IN_PATH = \"../data/ctracker_model/\"\n",
     "OUT_PATH = \"../data/ctracker_model/\"\n",
     "\n",
@@ -103,10 +106,10 @@
    "source": [
     "- # 1. CO2 mass\n",
     "    - ## [1.1. Calculate global, NH and SH total](#co2_mass_total)\n",
-    "    - ## [1.2. Vertical distribution](#Vertical_co2_mass)\n",
+    "    - ## [1.2. Vertical distribution](#vertical_co2_mass)\n",
     "- # 2. C mass\n",
     "    - ## [2.1. Calculate global, NH and SH total](#c_mass_total)\n",
-    "    - ## [2.2. Vertical distribution](#Vertical_co2_mass)\n",
+    "    - ## [2.2. Vertical distribution](#Vertical_c_mass)\n",
     "- # 3. CO2 mole frcation in ppm, including all of levels\n",
     "    - ## [3.1. Calculate global, NH and SH mean](#co2_molefraction_total)\n",
     "    - ## [3.2. Vertical distribution](#vertical_co2_molefraction)\n",
@@ -1557,7 +1560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"vertical_c_mass\"></a>\n",
+    "<a name=\"Vertical_c_mass\"></a>\n",
     "# 2.2. Vertical C mass distribution from surface to 200000m (level1 to level25)"
    ]
   },
@@ -3667,7 +3670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3700,7 +3703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3718,9 +3721,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0,0)...(0,20000)...(1,0)...(1,20000)...(2,0)...(3,0)...(4,0)...(5,0)...(6,0)...(7,0)...(7,20000)...(7,40000)...(8,0)...(9,0)...(10,0)...(11,0)...(11,20000)...(11,40000)...(12,0)...(12,20000)...(13,0)...(13,20000)...(14,0)...(15,0)...(16,0)...(17,0)...(18,0)...(18,20000)...(19,0)...(20,0)...(20,20000)...(20,40000)...(21,0)...(22,0)...(22,20000)...(23,0)...(23,20000)...(24,0)...(24,20000)...(25,0)...(26,0)...(27,0)...(28,0)...(29,0)...(30,0)...(31,0)...(32,0)...(33,0)...(33,20000)...(34,0)...(34,20000)...(34,40000)...(35,0)...(36,0)...(37,0)...(37,20000)...(38,0)...(39,0)...(40,0)...(41,0)...(42,0)...(42,20000)...(42,40000)...(43,0)...(43,20000)...(44,0)...(45,0)...(45,20000)...(45,40000)...(46,0)...(46,20000)...(46,40000)...(47,0)...(48,0)...(48,20000)...(48,40000)...(49,0)...(49,20000)...(50,0)...(51,0)...(52,0)...(53,0)...(53,20000)...(53,40000)...(54,0)...(55,0)...(56,0)...(57,0)...(58,0)...(59,0)...(60,0)...(61,0)...(62,0)...(63,0)...(64,0)...(64,20000)...(65,0)...(65,20000)...(66,0)...(66,20000)...(67,0)...(67,20000)...(68,0)...(68,20000)...(69,0)...(70,0)...(70,20000)...(71,0)...(71,20000)...(72,0)...(72,20000)...(72,40000)...(73,0)...(74,0)...(75,0)...(76,0)...(77,0)...(78,0)...(79,0)...(80,0)...(81,0)...(82,0)...(83,0)...(84,0)...(85,0)...(86,0)...(87,0)...(88,0)...(89,0)...(90,0)...(91,0)...(92,0)...(92,20000)...(93,0)...(94,0)...(95,0)...(96,0)...(96,20000)...(97,0)...(97,20000)...(98,0)...(99,0)...(100,0)...(101,0)...(102,0)...(103,0)...(103,20000)...(104,0)...(105,0)...(105,20000)...(106,0)...(107,0)...(108,0)...(109,0)...(109,20000)...(109,40000)...(110,0)...(111,0)...(111,20000)...(112,0)...(113,0)...(113,20000)...(114,0)...(114,20000)...(115,0)...(115,20000)...(116,0)...(116,20000)...(117,0)...(117,20000)...(117,40000)...(118,0)...(119,0)...(120,0)...(121,0)...(122,0)...(122,20000)...(123,0)...(123,20000)...(123,40000)...(124,0)...(125,0)...(126,0)...(127,0)...(128,0)...(129,0)...(130,0)...(131,0)...(132,0)...(133,0)...(133,20000)...(133,40000)...(134,0)...(135,0)...(136,0)...(137,0)...(138,0)...(139,0)...(140,0)...(140,20000)...(140,40000)...(141,0)...(142,0)...(143,0)...(143,20000)...(144,0)...(145,0)...(146,0)...(147,0)...(148,0)...(148,20000)...(148,40000)...(149,0)...(150,0)...(151,0)...(151,20000)...(152,0)...(153,0)...(154,0)...(154,20000)...(155,0)...(156,0)...(156,20000)...(157,0)...(158,0)...(159,0)...(160,0)...(160,20000)...(161,0)...(162,0)...(163,0)...(164,0)...(164,20000)...(164,40000)...(164,60000)...(165,0)...(166,0)...(167,0)...(168,0)...(169,0)...(170,0)...(170,20000)...(170,40000)...(171,0)...(172,0)...(173,0)...(174,0)...(175,0)...(176,0)...(177,0)...(177,20000)...(177,40000)...(178,0)...(179,0)...(180,0)...(181,0)...(182,0)...(183,0)...(184,0)...(185,0)...(186,0)...(187,0)...(188,0)...(189,0)...(190,0)...(190,20000)...(191,0)...(191,20000)...(192,0)...(193,0)...(194,0)...(195,0)...(195,20000)...(196,0)..."
+     ]
+    }
+   ],
    "source": [
     "# extract sample data from global grids\n",
     "df_samples = pd.DataFrame()\n",
@@ -3734,12 +3745,13 @@
     "            break\n",
     "        \n",
     "        if j % 20000 == 0:\n",
-    "            print(f\"({i},{j})\", end=\"...\")"
+    "            print(f\"({i},{j})\", end=\"...\")\n",
+    "df_samples = df_samples.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3948,7 +3960,7 @@
        "SH_sample      398.671356  401.764497  403.986052  "
       ]
      },
-     "execution_count": 82,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4013,7 +4025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4060,7 +4072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4112,7 +4124,7 @@
        "std   0.881128  0.444336  0.195244"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4128,7 +4140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4143,10 +4155,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>global_all</th>\n",
+       "      <th>NH_all</th>\n",
+       "      <th>SH_all</th>\n",
+       "      <th>global_sample</th>\n",
+       "      <th>NH_sample</th>\n",
+       "      <th>SH_sample</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>387.702706</td>\n",
+       "      <td>389.906648</td>\n",
+       "      <td>385.498765</td>\n",
+       "      <td>388.780363</td>\n",
+       "      <td>392.286299</td>\n",
+       "      <td>385.274427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>11.247829</td>\n",
+       "      <td>11.497008</td>\n",
+       "      <td>10.999876</td>\n",
+       "      <td>11.289544</td>\n",
+       "      <td>11.525194</td>\n",
+       "      <td>11.055656</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      global_all      NH_all      SH_all  global_sample   NH_sample  \\\n",
+       "mean  387.702706  389.906648  385.498765     388.780363  392.286299   \n",
+       "std    11.247829   11.497008   10.999876      11.289544   11.525194   \n",
+       "\n",
+       "       SH_sample  \n",
+       "mean  385.274427  \n",
+       "std    11.055656  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "co2_annual.T.agg([\"mean\", \"std\"])"
+   ]
   },
   {
    "cell_type": "code",
